--- a/app.json
+++ b/app.json
@@ -177,8 +177,7 @@
     "REDIS_URL": {
       "description": "Take it from redislabs.com and the format should be redis://username:password@cluster/",
       "required": "True",
-      "value": "redis://kiritoxdev
-:Kirito@123@redis-10025.c10.us-east-1-3.ec2.cloud.redislabs.com:10025"
+      "value": "redis://kiritoxdev:Kirito@123@redis-10025.c10.us-east-1-3.ec2.cloud.redislabs.com:10025"
     }
   }
 }
